Changes to all files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,127 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>My First Website</title>
-    </head>
-    <body>
-      <h1>My name is Henry</h1>
-      <p>And I am a cat person</p>
-    </body>
-  </html>
+<html lang="en-UK">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Used auto parts for sale">
+    <meta name="keywords" content="fuel filters, brake discs, belts" />
+    <link rel="stylesheet" href="layout_stylesheet.css">
+    <title>About Me Page</title>
+  </head>
+  <header>
+
+    <!-- Load an icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+    <div class="navbar">
+        <a class="active" href="./Index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+        <a href="./About.html"><i class="fa fa-fw fa-search"></i> About Me</a>
+        <a href="./Contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+        <a href="#"><i class="fa fa-fw fa-user"></i> My CV</a>
+    </div>
+ </header>
+  <body>
+   <article>
+    <div class="container">
+        <h1>George Idumwonyi</h1>
+        <h2>WEB DEVELOPER</h2>
+    <!-- <p>adding image to page </p> -->
+    <div class="right">
+      <h2> </h2>
+        <p><img src="images/jessica.png" id="indexpic">   
+          <p class="center large"> 
+
+            Dedicated Software QA Tester with two (2) years of experience in
+               achieving tangible results and cross-team collaboration. Demonstrated
+               success in grey and black box testing. Writes and understands test
+               cases, creates test plans and identifies use cases. Comprehensive
+               understanding of full software development lifecycle. Proactive and
+               excited to partner with like-minded individuals to achieve goals.
+             </p>   
+             <br>
+             <p>I am Self-motivated, detail-oriented and target driven financial analyst/advisor, excellent team player with good analytical ability and experience in the Financial services, IT services & film making industry. </p>
+        <p> My background is in Finance. A Qualified Financial Analyst with a Distinction in MSc. Global Finance, BSc Banking & Finance and Certificate in Bloomberg Market Concepts. Achieving these knowledge with tailored hands-on experience of working with different firms, 
+          Adeola has created a niche whereby, his business acumen and negotiating curve is second to non. Adeola is a committed, well trained and disciplined financial analyst helping to apply general management principles to financial resources of the enterprise as a result 
+          maximizing the value of the firm to stakeholders. </p>
+  
+        <p>Adeola has the ability to motivate and inspire others under difficult work conditions. He is an administrator with excellent time management skills. A good communicator with proven interpersonal skills. Excellent negotiator in helping to achieve great deals for beneficial agreement. </p>
+           </div>
+    </div>  
+    <br />
+        <a class="button-email"
+              href="mailto:famakinwaade@gmail.com?Subject=  Question"
+              target="_top">Get in touch</a>
+            <br>
+            <br>
+   </article>
+    <footer>
+      <p>Copyright 2022 by George I. All Rights Reserved.</p>
+           <!-- Add font awesome icons to style Socila Media Buttons-->
+           <a href="https://www.linkedin.comidumwonyigeorge" class="fa fa-linkedin"></a>
+           <a href="https://twitter.com/idumwonyi89" class="fa fa-twitter"></a>
+           <a href="https://github.com/Makeve/Week2-Code-The-Future" class="fa fa-github"></a>
+           <a href="https://instagram.com/__alpha.x" class="fa fa-instagram"></a>
+    </footer>
+  </body>
+</html>
+
+
+<!--<html 1ang="en">
+  <head>
+      <link rel="stylesheet" href="layout_stylesheet.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me Page</title>
+    <div class="navbar">
+        <a class="active" href="./Index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+        <a href="./About.html"><i class="fa fa-fw fa-search"></i> About Me</a>
+        <a href="./Contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+        <a href="#"><i class="fa fa-fw fa-user"></i> My CV</a>
+      </div>
+  </head>
+  <body>
+      <article>
+      <div class="container">
+    <h1>George Idumwonyi</h1>
+    <h2>WEB DEVELOPER</h2>
+      <!--</div class="image">
+           <img src="./images/jessica.png" alt="A Photograph of me">
+      </div>
+
+      <div class="right">
+        <h2> </h2>
+          <p><img src="images/jessica.png" id="indexpic">
+            <p class="center large" style="color:#641d1d;"> Hi, I'm George Idu.
+
+                 <!-- <p>This is a paragraph </p> 
+                 A Financial Consultant and a Movie Producer</p>
+                 <br>
+                 <br>
+                 <p>Dedicated Software QA Tester with two (2) years of experience in
+                    achieving tangible results and cross-team collaboration. Demonstrated
+                    success in grey and black box testing. Writes and understands test
+                    cases, creates test plans and identifies use cases. Comprehensive
+                    understanding of full software development lifecycle. Proactive and
+                    excited to partner with like-minded individuals to achieve goals.
+                  </p>            
+                </div> 
+
+        <a class="button-email"
+        href="mailto:idumwonyi89@gmail.com?Subject=  Question"
+        target="_top">Get in touch</a>
+      <br>
+      <br>
+      </div>
+            </article>
+      <footer>
+        <p>Copyright 2022 by George I. All Rights Reserved.</p>
+        <span style="color: var(--colors-primary)">
+          <a target="_blank" href="https://www.linkedin.com/in/idumwonyigeorge">Linkedin</a> 
+          <a target="_blank" href="https://github.com/Makeve/Week2-Code-The-Future">GitHub</a> 
+          <a target="_blank" href="https://twitter.com/idumwonyi89">Twitter</a>
+          <a target="_blank" href="https://instagram.com/__alpha.x">Instagram</a>
+        </span>
+      </footer>
+
+  </body>
+</html>
