Extra code changes

--- a/Contact.html
+++ b/Contact.html
@@ -5,16 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
-    <div class="navbar">
-        <a href="./Index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="./About.html"><i class="fa fa-fw fa-search"></i> About Me</a>
-        <a  class="active2" href="./Contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-        <a href="#"><i class="fa fa-fw fa-user"></i> My CV</a>
-      </div>
-  </head>
+   
+      </head>
+      <header>
+
+        <!-- Load an icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <div class="navbar">
+            <a href="./Index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="./About.html"><i class="fa fa-fw fa-search"></i> About Me</a>
+            <a  class="active2" href="./Contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+            <a href="#"><i class="fa fa-fw fa-user"></i> My CV</a>
+          </div>
+  </header>
+  
   <body>
     <div class="flex-item-contact">
-        <h2><p style="color:#641d1d;">Get in Touch </p></h2>
+        <h2><p style="color:black;">Get in Touch </p></h2>
         <br>
     <!-- <p>adding a contact form</p> -->
   <form  action="/Contact.html">
@@ -41,8 +48,7 @@
     <!-- <p>break points </p> -->
     <br>
     <input type="submit" value="Submit">
-  <!-- <p>Reset button to reset all fields </p> -->
-    <input type="reset">
+
   </form> 
       </div>
     </div>
@@ -53,7 +59,7 @@
     <p>Copyright 2022 by George I. All Rights Reserved.</p>
      <span style="color: var(--colors-primary)">
     <a target="_blank" href="https://www.linkedin.com/in/idumwonyigeorge">Linkedin</a> 
-    <a target="_blank" href="https://github.com/Makeve/Week2-Code-The-Future">GitHub</a> 
+    <a target="_blank" href="https://github.com/TAIBUGE/Hisenberg">GitHub</a> 
     <a target="_blank" href="https://twitter.com/idumwonyi89">Twitter</a>
     <a target="_blank" href="https://instagram.com/__alpha.x">Instagram</a>
     </span>
